--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Cat Tom's Note</title>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width initial-scale=1'>
+  <link href="https://static.cattom.site/image/icon/32.png" rel="icon" sizes="32x32" />
 
   <style type='text/css'>
     html {
