打卡：2021年08月29日

--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html style='font-size:18px !important'>
 
 <head>
-  <title>Cat Tom's Note</title>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width initial-scale=1'>
-  <link href="https://static.cattom.site/image/icon/32.png" rel="icon" sizes="32x32" />
-
+  <link href="https://static.cattom.site/image/icon/32.png" rel="icon" sizes="32x32">
+  <link rel="stylesheet" href="https://static.cattom.site/mint/font.css">
   <style type='text/css'>
     html {
       overflow-x: initial !important;
@@ -1059,43 +1058,8 @@
     }
 
     /*serif*/
-    @font-face {
-      font-family: 'Lexend';
-      font-weight: normal;
-      font-style: normal;
-      src: url('./mint/Lexend-Regular.ttf')
-    }
-
-    @font-face {
-      font-family: 'Lexend';
-      font-weight: bold;
-      font-style: normal;
-      src: url('./mint/Lexend-Bold.ttf')
-    }
-
     /*monospace*/
-    @font-face {
-      font-family: 'SourceCodePro';
-      font-weight: normal;
-      font-style: normal;
-      src: local(SourceCodePro), url('./mint/SourceCodePro-Regular.ttf')
-    }
-
     /*Chinese*/
-    @font-face {
-      font-family: 'NotoSansSC';
-      font-weight: normal;
-      font-style: normal;
-      src: url('./mint/NotoSansSC-Regular.otf')
-    }
-
-    @font-face {
-      font-family: 'NotoSansSC';
-      font-weight: bold;
-      font-style: normal;
-      src: url('./mint/NotoSansSC-Bold.otf')
-    }
-
     html {
       font-size: 16px;
     }
@@ -1571,7 +1535,7 @@
       color: white !important;
     }
   </style>
-  <title>index</title>
+  <title>Cat Tom&#39;s Note</title>
 </head>
 
 <body class='typora-export'>
@@ -1583,10 +1547,13 @@
         <p><span>欢迎来到 Cat Tom 的笔记本。</span></p>
       </blockquote>
       <h2 id='javascript'><span>JavaScript</span></h2>
-      <p><a href='#'><span>入门</span></a></p>
-      <h2 id='html'><span>HTML</span></h2>
-      <p>&nbsp;</p>
-      <h2 id='css'><span>CSS</span></h2>
+      <ul>
+        <li><a href='https://note.cattom.site/JavaScript Learning.pdf'><span>入门</span></a></li>
+      </ul>
+      <h2 id='小尝试'><span>小尝试</span></h2>
+      <ul>
+        <li><a href='https://note.cattom.site/code/draw-lots/'><span>抽签</span></a></li>
+      </ul>
       <p>&nbsp;</p>
     </div>
   </div>
