--- a/code/draw-lots/draw-lots.html
+++ b/code/draw-lots/draw-lots.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://static.cattom.site/image/icon/32.png" rel="icon" sizes="32x32" />
     <title>抽签时间到~</title>
     <style>
         .text {
