--- a/code/draw-lots/index.html
+++ b/code/draw-lots/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width initial-scale=1'>
-
+  <link href="https://static.cattom.site/image/icon/32.png" rel="icon" sizes="32x32" />
+  <link rel="stylesheet" href="https://static.cattom.site/mint/font.css">
   <style type='text/css'>
     html {
       overflow-x: initial !important;
@@ -1056,43 +1057,6 @@
 
     }
 
-    /*serif*/
-    @font-face {
-      font-family: 'Lexend';
-      font-weight: normal;
-      font-style: normal;
-      src: url('../../mint/Lexend-Regular.ttf')
-    }
-
-    @font-face {
-      font-family: 'Lexend';
-      font-weight: bold;
-      font-style: normal;
-      src: url('../../mint/Lexend-Bold.ttf')
-    }
-
-    /*monospace*/
-    @font-face {
-      font-family: 'SourceCodePro';
-      font-weight: normal;
-      font-style: normal;
-      src: local(SourceCodePro), url('../../mint/SourceCodePro-Regular.ttf')
-    }
-
-    /*Chinese*/
-    @font-face {
-      font-family: 'NotoSansSC';
-      font-weight: normal;
-      font-style: normal;
-      src: url('../../mint/NotoSansSC-Regular.otf')
-    }
-
-    @font-face {
-      font-family: 'NotoSansSC';
-      font-weight: bold;
-      font-style: normal;
-      src: url('../../mint/NotoSansSC-Bold.otf')
-    }
 
     html {
       font-size: 16px;
