--- a/index.html
+++ b/index.html
@@ -1548,13 +1548,12 @@
       </blockquote>
       <h2 id='javascript'><span>JavaScript</span></h2>
       <ul>
-        <li><a href='https://note.cattom.site/JavaScript Learning.pdf'><span>入门</span></a></li>
+        <li><a href='https://note.cattom.site/JavaScript-Learning.pdf'><span>入门</span></a></li>
       </ul>
       <h2 id='小尝试'><span>小尝试</span></h2>
       <ul>
         <li><a href='https://note.cattom.site/code/draw-lots/'><span>抽签</span></a></li>
       </ul>
-      <p>&nbsp;</p>
     </div>
   </div>
 </body>
